--- a/week4/Bookworm/Bookworm/Base.lproj/Main.storyboard
+++ b/week4/Bookworm/Bookworm/Base.lproj/Main.storyboard
@@ -70,6 +70,118 @@
             </objects>
             <point key="canvasLocation" x="132" y="-34"/>
         </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="m6e-5z-F7Q">
+            <objects>
+                <viewController storyboardIdentifier="DetailViewController" id="WFx-Nr-nbX" customClass="DetailViewController" customModule="Bookworm" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="tgR-Dk-cLw">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y9y-vA-jOg">
+                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aBD-z1-9RO">
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="759"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rJ7-C4-PII">
+                                                <rect key="frame" x="16.000000000000007" y="16" width="126.66666666666669" height="183.33333333333334"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="rJ7-C4-PII" secondAttribute="height" multiplier="60:87" id="ex1-Gc-XCX"/>
+                                                </constraints>
+                                            </imageView>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="G7m-ee-Ztd">
+                                                <rect key="frame" x="152.66666666666663" y="100" width="224.33333333333337" height="99.333333333333314"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="제목" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ezZ-k7-0Pt">
+                                                        <rect key="frame" x="0.0" y="0.0" width="29.666666666666668" height="20.333333333333332"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="저자 / 역자 | 출판사" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="spl-ia-G6N">
+                                                        <rect key="frame" x="0.0" y="26.333333333333343" width="129.33333333333334" height="20.333333333333329"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="정가" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qmx-89-Zh5">
+                                                        <rect key="frame" x="0.0" y="52.666666666666657" width="29.666666666666668" height="20.333333333333329"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="판매가" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rqw-Fb-Ixp">
+                                                        <rect key="frame" x="0.0" y="79" width="44.333333333333336" height="20.333333333333329"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                            </stackView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="책소개" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0xm-IN-1Lx">
+                                                <rect key="frame" x="16" y="219.33333333333331" width="52" height="24"/>
+                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2ZE-8M-gLs">
+                                                <rect key="frame" x="16" y="246.33333333333334" width="361" height="20.333333333333343"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstItem="2ZE-8M-gLs" firstAttribute="top" secondItem="0xm-IN-1Lx" secondAttribute="bottom" constant="3" id="69H-Zo-XaY"/>
+                                            <constraint firstItem="G7m-ee-Ztd" firstAttribute="leading" secondItem="rJ7-C4-PII" secondAttribute="trailing" constant="10" id="6F9-8a-pJG"/>
+                                            <constraint firstItem="2ZE-8M-gLs" firstAttribute="leading" secondItem="0xm-IN-1Lx" secondAttribute="leading" id="LVP-kH-zQY"/>
+                                            <constraint firstItem="0xm-IN-1Lx" firstAttribute="top" secondItem="rJ7-C4-PII" secondAttribute="bottom" constant="20" id="NsE-m0-PT1"/>
+                                            <constraint firstItem="rJ7-C4-PII" firstAttribute="leading" secondItem="aBD-z1-9RO" secondAttribute="leading" constant="16" id="PxR-44-Sir"/>
+                                            <constraint firstItem="G7m-ee-Ztd" firstAttribute="bottom" secondItem="rJ7-C4-PII" secondAttribute="bottom" id="c94-Ut-pDf"/>
+                                            <constraint firstItem="0xm-IN-1Lx" firstAttribute="leading" secondItem="rJ7-C4-PII" secondAttribute="leading" id="egr-jb-JTb"/>
+                                            <constraint firstItem="rJ7-C4-PII" firstAttribute="top" secondItem="aBD-z1-9RO" secondAttribute="top" constant="16" id="irl-n4-Xmg"/>
+                                            <constraint firstItem="rJ7-C4-PII" firstAttribute="width" secondItem="aBD-z1-9RO" secondAttribute="height" multiplier="1:6" id="mYc-WJ-OFk"/>
+                                            <constraint firstAttribute="trailing" secondItem="G7m-ee-Ztd" secondAttribute="trailing" constant="16" id="y4h-hO-Y8M"/>
+                                            <constraint firstAttribute="trailing" secondItem="2ZE-8M-gLs" secondAttribute="trailing" constant="16" id="y9w-ck-b89"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="aBD-z1-9RO" firstAttribute="height" secondItem="709-0y-AZ8" secondAttribute="height" priority="250" id="I1o-hx-7Oh"/>
+                                    <constraint firstItem="aBD-z1-9RO" firstAttribute="bottom" secondItem="ArO-HU-3jS" secondAttribute="bottom" id="IFx-iQ-hch"/>
+                                    <constraint firstItem="aBD-z1-9RO" firstAttribute="leading" secondItem="ArO-HU-3jS" secondAttribute="leading" id="MID-Ox-E9F"/>
+                                    <constraint firstItem="709-0y-AZ8" firstAttribute="trailing" secondItem="aBD-z1-9RO" secondAttribute="trailing" id="MRx-3i-erJ"/>
+                                    <constraint firstItem="aBD-z1-9RO" firstAttribute="trailing" secondItem="ArO-HU-3jS" secondAttribute="trailing" id="ai7-7h-mhx"/>
+                                    <constraint firstItem="ArO-HU-3jS" firstAttribute="top" secondItem="aBD-z1-9RO" secondAttribute="top" id="pgG-RL-FNs"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="ArO-HU-3jS"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="709-0y-AZ8"/>
+                            </scrollView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="mLz-VR-OaD"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="y9y-vA-jOg" firstAttribute="leading" secondItem="mLz-VR-OaD" secondAttribute="leading" id="1GR-F5-nOW"/>
+                            <constraint firstItem="y9y-vA-jOg" firstAttribute="top" secondItem="mLz-VR-OaD" secondAttribute="top" id="MeF-3N-4Gv"/>
+                            <constraint firstItem="mLz-VR-OaD" firstAttribute="bottom" secondItem="y9y-vA-jOg" secondAttribute="bottom" id="QOf-zN-eBh"/>
+                            <constraint firstItem="mLz-VR-OaD" firstAttribute="trailing" secondItem="y9y-vA-jOg" secondAttribute="trailing" id="W1W-Lw-Add"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="bookContentsLabel" destination="2ZE-8M-gLs" id="qq9-ym-C13"/>
+                        <outlet property="bookImageView" destination="rJ7-C4-PII" id="aAZ-q2-g11"/>
+                        <outlet property="bookInfoLabel" destination="spl-ia-G6N" id="hhD-8h-vGQ"/>
+                        <outlet property="bookPriceLabel" destination="Qmx-89-Zh5" id="8x5-KY-r6G"/>
+                        <outlet property="bookSalePriceLabel" destination="Rqw-Fb-Ixp" id="HER-Vh-X45"/>
+                        <outlet property="bookTitleLabel" destination="ezZ-k7-0Pt" id="eoD-WW-UHJ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8OZ-40-kT0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1006.8702290076335" y="-35.211267605633807"/>
+        </scene>
     </scenes>
     <resources>
         <systemColor name="systemBackgroundColor">
