--- a/week4/TMDB/TMDB/Base.lproj/Main.storyboard
+++ b/week4/TMDB/TMDB/Base.lproj/Main.storyboard
@@ -57,6 +57,21 @@
             </objects>
             <point key="canvasLocation" x="1057.2519083969464" y="-34.507042253521128"/>
         </scene>
+        <!--Detail Trend View Controller-->
+        <scene sceneID="q3e-xv-NUL">
+            <objects>
+                <viewController storyboardIdentifier="DetailTrendViewController" id="9ZB-iK-8QC" customClass="DetailTrendViewController" customModule="TMDB" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="cYt-bj-Tri">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="Xje-gH-TzI"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Nw4-O8-p1y" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1906" y="-35"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="KHi-qm-ig3">
             <objects>
